file create dates

--- a/canvas_courses_all.ipynb
+++ b/canvas_courses_all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,6 +18,8 @@
     "import gspread\n",
     "import json\n",
     "from canvasapi import Canvas\n",
+    "\n",
+    "from datetime import datetime\n",
     "\n",
     "#import plotly.express as px"
    ]
@@ -240,13 +242,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_course_info(course_id):\n",
     "    '''This function gets the course information and the file/assignment update times,\n",
     "    by the course_id, and returns a list of '''\n",
+    "    cutoff_date = datetime.strptime('2020-05-31', '%Y-%m-%d') #by this time most default content was created\n",
     "    try:\n",
     "        c1 = canvas.get_course(course_id)\n",
     "\n",
@@ -258,17 +261,21 @@
     "        files_ = c1.get_files()\n",
     "        assn_ = c1.get_assignments()\n",
     "        #Get the file updated times\n",
-    "        file_utimes = [f_.updated_at for f_ in files_]\n",
+    "        file_utimes = [f_.updated_at for f_ in files_ if datetime.strptime(f_.updated_at, \n",
+    "                                                                        '%Y-%m-%dT%H:%M:%SZ') > cutoff_date]\n",
     "        \n",
     "        #Get the file created times\n",
-    "        file_ctimes = [f_.created_at for f_ in files_]\n",
+    "        file_ctimes = [f_.created_at for f_ in files_ if datetime.strptime(f_.created_at, \n",
+    "                                                                        '%Y-%m-%dT%H:%M:%SZ') > cutoff_date]\n",
     "        \n",
     "        #Get the assignment updated times\n",
-    "        assn_utimes = [a_.updated_at for a_ in assn_]\n",
+    "        assn_utimes = [a_.updated_at for a_ in assn_ if datetime.strptime(a_.updated_at, \n",
+    "                                                                        '%Y-%m-%dT%H:%M:%SZ') > cutoff_date]\n",
     "        fa_times = file_utimes + assn_utimes\n",
     "        \n",
     "        #Get the assignment created times\n",
-    "        assn_ctimes = [a_.created_at for a_ in assn_]\n",
+    "        assn_ctimes = [a_.created_at for a_ in assn_ if datetime.strptime(a_.created_at, \n",
+    "                                                                        '%Y-%m-%dT%H:%M:%SZ') > cutoff_date]\n",
     "        fa_c_times = file_ctimes + assn_ctimes\n",
     "\n",
     "        \n",
@@ -276,17 +283,19 @@
     "        fa_times = np.array(fa_times, dtype='datetime64')\n",
     "        fa_c_times = np.array(fa_c_times, dtype='datetime64')        \n",
     "\n",
-    "\n",
+    "        fa_max = fa_times.max() if len(fa_times)>0 else None\n",
+    "        fa_c_min = fa_c_times.min() if len(fa_c_times)>0 else None\n",
     "\n",
     "        return [c1.id, course_dept, course_name, course_state, len(file_utimes), len(assn_utimes), \n",
-    "                len(fa_times), fa_times.max(), fa_c_times.min()]\n",
+    "                len(fa_times), fa_max, fa_c_min]\n",
     "    except Exception as e:\n",
+    "        #print(e)\n",
     "        return [None, None, None, None, None, None, None, None, None]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,15 +515,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/anindyaroy/Sites/fun/venv/lib/python3.6/site-packages/ipykernel_launcher.py:30: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
-      "/Users/anindyaroy/Sites/fun/venv/lib/python3.6/site-packages/ipykernel_launcher.py:31: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n"
+      "/Users/anindyaroy/Sites/fun/venv/lib/python3.6/site-packages/ipykernel_launcher.py:35: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "/Users/anindyaroy/Sites/fun/venv/lib/python3.6/site-packages/ipykernel_launcher.py:36: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n"
      ]
     },
     {
@@ -565,11 +574,11 @@
        "      <td>Canvas Testing</td>\n",
        "      <td>Canvas Core Team Sandbox</td>\n",
        "      <td>available</td>\n",
-       "      <td>11</td>\n",
-       "      <td>15</td>\n",
-       "      <td>26</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>2020-07-07 15:02:45</td>\n",
-       "      <td>2020-05-08 17:50:26</td>\n",
+       "      <td>NaT</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -579,11 +588,11 @@
        "      <td>Canvas Testing</td>\n",
        "      <td>Growing with Canvas</td>\n",
        "      <td>unpublished</td>\n",
-       "      <td>36</td>\n",
-       "      <td>10</td>\n",
-       "      <td>46</td>\n",
-       "      <td>2020-05-05 16:07:49</td>\n",
-       "      <td>2020-05-05 16:07:26</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -593,11 +602,11 @@
        "      <td>Manually-Created Courses</td>\n",
        "      <td>Admin Guide</td>\n",
        "      <td>unpublished</td>\n",
-       "      <td>26</td>\n",
        "      <td>0</td>\n",
-       "      <td>26</td>\n",
-       "      <td>2020-05-08 18:15:06</td>\n",
-       "      <td>2020-05-08 18:14:55</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -607,11 +616,11 @@
        "      <td>Open Membership</td>\n",
        "      <td>Career Foundations - Incoming MBA Class of 2022</td>\n",
        "      <td>available</td>\n",
-       "      <td>36</td>\n",
-       "      <td>9</td>\n",
-       "      <td>45</td>\n",
+       "      <td>8</td>\n",
+       "      <td>7</td>\n",
+       "      <td>15</td>\n",
        "      <td>2020-07-15 14:38:58</td>\n",
-       "      <td>2019-05-07 19:45:50</td>\n",
+       "      <td>2020-06-03 14:34:04</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -621,11 +630,11 @@
        "      <td>Canvas Demo Courses</td>\n",
        "      <td>Template 1</td>\n",
        "      <td>unpublished</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2020-05-12 16:18:43</td>\n",
-       "      <td>2020-05-12 16:18:40</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -642,18 +651,18 @@
        "4       3149       Canvas Demo Courses   \n",
        "\n",
        "                                        Course_name course_state  num_files  \\\n",
-       "0                          Canvas Core Team Sandbox    available         11   \n",
-       "1                               Growing with Canvas  unpublished         36   \n",
-       "2                                       Admin Guide  unpublished         26   \n",
-       "3  Career Foundations - Incoming MBA Class of 2022     available         36   \n",
-       "4                                        Template 1  unpublished          2   \n",
+       "0                          Canvas Core Team Sandbox    available          0   \n",
+       "1                               Growing with Canvas  unpublished          0   \n",
+       "2                                       Admin Guide  unpublished          0   \n",
+       "3  Career Foundations - Incoming MBA Class of 2022     available          8   \n",
+       "4                                        Template 1  unpublished          0   \n",
        "\n",
        "   num_assignments  num_tot_fa      last_update_at    first_created_at  \\\n",
-       "0               15          26 2020-07-07 15:02:45 2020-05-08 17:50:26   \n",
-       "1               10          46 2020-05-05 16:07:49 2020-05-05 16:07:26   \n",
-       "2                0          26 2020-05-08 18:15:06 2020-05-08 18:14:55   \n",
-       "3                9          45 2020-07-15 14:38:58 2019-05-07 19:45:50   \n",
-       "4                3           5 2020-05-12 16:18:43 2020-05-12 16:18:40   \n",
+       "0                1           1 2020-07-07 15:02:45                 NaT   \n",
+       "1                0           0                 NaT                 NaT   \n",
+       "2                0           0                 NaT                 NaT   \n",
+       "3                7          15 2020-07-15 14:38:58 2020-06-03 14:34:04   \n",
+       "4                0           0                 NaT                 NaT   \n",
        "\n",
        "   if_LT_led  LT_email  \n",
        "0          0       NaN  \n",
@@ -663,7 +672,7 @@
        "4          0       NaN  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,15 +701,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/anindyaroy/Sites/fun/venv/lib/python3.6/site-packages/ipykernel_launcher.py:30: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
-      "/Users/anindyaroy/Sites/fun/venv/lib/python3.6/site-packages/ipykernel_launcher.py:31: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n"
+      "/Users/anindyaroy/Sites/fun/venv/lib/python3.6/site-packages/ipykernel_launcher.py:35: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "/Users/anindyaroy/Sites/fun/venv/lib/python3.6/site-packages/ipykernel_launcher.py:36: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n"
      ]
     },
     {
@@ -749,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -759,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -778,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -789,14 +798,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1it [00:04,  4.26s/it]\n"
+      "1it [00:03,  3.40s/it]\n"
      ]
     }
    ],
@@ -804,15 +813,6 @@
     "all_courses_df[all_courses_df.if_sandbox_course==0]\n",
     "all_courses_df.to_gbq('lt_courses.{}'.format(out_table), project_id, if_exists='replace', credentials=credentials)\n",
     "#all_courses_df.to_csv('all_courses.csv', index=None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#all_courses_df['last_update_at']"
    ]
   }
  ],
