--- a/canvas_courses_all.ipynb
+++ b/canvas_courses_all.ipynb
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,33 +261,45 @@
     "        files_ = c1.get_files()\n",
     "        assn_ = c1.get_assignments()\n",
     "        #Get the file updated times\n",
+    "        file_utimes_all = [f_.updated_at for f_ in files_ ]        \n",
     "        file_utimes = [f_.updated_at for f_ in files_ if datetime.strptime(f_.updated_at, \n",
     "                                                                        '%Y-%m-%dT%H:%M:%SZ') > cutoff_date]\n",
     "        \n",
     "        #Get the file created times\n",
+    "        file_ctimes_all = [f_.created_at for f_ in files_ ]\n",
     "        file_ctimes = [f_.created_at for f_ in files_ if datetime.strptime(f_.created_at, \n",
     "                                                                        '%Y-%m-%dT%H:%M:%SZ') > cutoff_date]\n",
     "        \n",
     "        #Get the assignment updated times\n",
+    "        assn_utimes_all = [a_.updated_at for a_ in assn_ ]\n",
     "        assn_utimes = [a_.updated_at for a_ in assn_ if datetime.strptime(a_.updated_at, \n",
     "                                                                        '%Y-%m-%dT%H:%M:%SZ') > cutoff_date]\n",
-    "        fa_times = file_utimes + assn_utimes\n",
+    "\n",
     "        \n",
     "        #Get the assignment created times\n",
+    "        assn_ctimes_all = [a_.created_at for a_ in assn_ ]\n",
     "        assn_ctimes = [a_.created_at for a_ in assn_ if datetime.strptime(a_.created_at, \n",
     "                                                                        '%Y-%m-%dT%H:%M:%SZ') > cutoff_date]\n",
-    "        fa_c_times = file_ctimes + assn_ctimes\n",
     "\n",
+    "        fa_times_all = file_utimes_all + assn_utimes_all\n",
+    "        fa_c_times_all = file_ctimes_all + assn_ctimes_all\n",
+    "        \n",
+    "        fa_times = file_utimes + assn_utimes\n",
+    "        fa_c_times = file_ctimes + assn_ctimes\n",
+    "        \n",
     "        \n",
     "        #Convert the whole thing \n",
+    "        fa_times_all = np.array(fa_times_all, dtype='datetime64')\n",
+    "        fa_c_times_all = np.array(fa_c_times_all, dtype='datetime64')\n",
+    "        \n",
     "        fa_times = np.array(fa_times, dtype='datetime64')\n",
-    "        fa_c_times = np.array(fa_c_times, dtype='datetime64')        \n",
+    "        fa_c_times = np.array(fa_c_times, dtype='datetime64')      \n",
     "\n",
-    "        fa_max = fa_times.max() if len(fa_times)>0 else None\n",
-    "        fa_c_min = fa_c_times.min() if len(fa_c_times)>0 else None\n",
+    "        fa_max = fa_times.max() if len(fa_times)>0 else fa_times_all.max()\n",
+    "        fa_c_min = fa_c_times.min() if len(fa_c_times)>0 else fa_c_times_all.min()\n",
     "\n",
-    "        return [c1.id, course_dept, course_name, course_state, len(file_utimes), len(assn_utimes), \n",
-    "                len(fa_times), fa_max, fa_c_min]\n",
+    "        return [c1.id, course_dept, course_name, course_state, len(file_utimes_all), len(assn_utimes_all), \n",
+    "                len(fa_times_all), fa_max, fa_c_min]\n",
     "    except Exception as e:\n",
     "        #print(e)\n",
     "        return [None, None, None, None, None, None, None, None, None]"
@@ -515,15 +527,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/anindyaroy/Sites/fun/venv/lib/python3.6/site-packages/ipykernel_launcher.py:35: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
-      "/Users/anindyaroy/Sites/fun/venv/lib/python3.6/site-packages/ipykernel_launcher.py:36: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n"
+      "/Users/anindyaroy/Sites/fun/venv/lib/python3.6/site-packages/ipykernel_launcher.py:44: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "/Users/anindyaroy/Sites/fun/venv/lib/python3.6/site-packages/ipykernel_launcher.py:45: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "/Users/anindyaroy/Sites/fun/venv/lib/python3.6/site-packages/ipykernel_launcher.py:47: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "/Users/anindyaroy/Sites/fun/venv/lib/python3.6/site-packages/ipykernel_launcher.py:48: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n"
      ]
     },
     {
@@ -574,11 +588,11 @@
        "      <td>Canvas Testing</td>\n",
        "      <td>Canvas Core Team Sandbox</td>\n",
        "      <td>available</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>11</td>\n",
+       "      <td>15</td>\n",
+       "      <td>26</td>\n",
        "      <td>2020-07-07 15:02:45</td>\n",
-       "      <td>NaT</td>\n",
+       "      <td>2020-05-08 17:50:26</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -588,11 +602,11 @@
        "      <td>Canvas Testing</td>\n",
        "      <td>Growing with Canvas</td>\n",
        "      <td>unpublished</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>NaT</td>\n",
+       "      <td>36</td>\n",
+       "      <td>10</td>\n",
+       "      <td>46</td>\n",
+       "      <td>2020-05-05 16:07:49</td>\n",
+       "      <td>2020-05-05 16:07:26</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -602,11 +616,11 @@
        "      <td>Manually-Created Courses</td>\n",
        "      <td>Admin Guide</td>\n",
        "      <td>unpublished</td>\n",
+       "      <td>26</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>NaT</td>\n",
+       "      <td>26</td>\n",
+       "      <td>2020-05-08 18:15:06</td>\n",
+       "      <td>2020-05-08 18:14:55</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -616,9 +630,9 @@
        "      <td>Open Membership</td>\n",
        "      <td>Career Foundations - Incoming MBA Class of 2022</td>\n",
        "      <td>available</td>\n",
-       "      <td>8</td>\n",
-       "      <td>7</td>\n",
-       "      <td>15</td>\n",
+       "      <td>36</td>\n",
+       "      <td>9</td>\n",
+       "      <td>45</td>\n",
        "      <td>2020-07-15 14:38:58</td>\n",
        "      <td>2020-06-03 14:34:04</td>\n",
        "      <td>0</td>\n",
@@ -630,11 +644,11 @@
        "      <td>Canvas Demo Courses</td>\n",
        "      <td>Template 1</td>\n",
        "      <td>unpublished</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>NaT</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2020-05-12 16:18:43</td>\n",
+       "      <td>2020-05-12 16:18:40</td>\n",
        "      <td>0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -651,18 +665,18 @@
        "4       3149       Canvas Demo Courses   \n",
        "\n",
        "                                        Course_name course_state  num_files  \\\n",
-       "0                          Canvas Core Team Sandbox    available          0   \n",
-       "1                               Growing with Canvas  unpublished          0   \n",
-       "2                                       Admin Guide  unpublished          0   \n",
-       "3  Career Foundations - Incoming MBA Class of 2022     available          8   \n",
-       "4                                        Template 1  unpublished          0   \n",
+       "0                          Canvas Core Team Sandbox    available         11   \n",
+       "1                               Growing with Canvas  unpublished         36   \n",
+       "2                                       Admin Guide  unpublished         26   \n",
+       "3  Career Foundations - Incoming MBA Class of 2022     available         36   \n",
+       "4                                        Template 1  unpublished          2   \n",
        "\n",
        "   num_assignments  num_tot_fa      last_update_at    first_created_at  \\\n",
-       "0                1           1 2020-07-07 15:02:45                 NaT   \n",
-       "1                0           0                 NaT                 NaT   \n",
-       "2                0           0                 NaT                 NaT   \n",
-       "3                7          15 2020-07-15 14:38:58 2020-06-03 14:34:04   \n",
-       "4                0           0                 NaT                 NaT   \n",
+       "0               15          26 2020-07-07 15:02:45 2020-05-08 17:50:26   \n",
+       "1               10          46 2020-05-05 16:07:49 2020-05-05 16:07:26   \n",
+       "2                0          26 2020-05-08 18:15:06 2020-05-08 18:14:55   \n",
+       "3                9          45 2020-07-15 14:38:58 2020-06-03 14:34:04   \n",
+       "4                3           5 2020-05-12 16:18:43 2020-05-12 16:18:40   \n",
        "\n",
        "   if_LT_led  LT_email  \n",
        "0          0       NaN  \n",
@@ -672,7 +686,7 @@
        "4          0       NaN  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -701,22 +715,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/anindyaroy/Sites/fun/venv/lib/python3.6/site-packages/ipykernel_launcher.py:35: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
-      "/Users/anindyaroy/Sites/fun/venv/lib/python3.6/site-packages/ipykernel_launcher.py:36: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n"
+      "/Users/anindyaroy/Sites/fun/venv/lib/python3.6/site-packages/ipykernel_launcher.py:44: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "/Users/anindyaroy/Sites/fun/venv/lib/python3.6/site-packages/ipykernel_launcher.py:45: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "/Users/anindyaroy/Sites/fun/venv/lib/python3.6/site-packages/ipykernel_launcher.py:47: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n",
+      "/Users/anindyaroy/Sites/fun/venv/lib/python3.6/site-packages/ipykernel_launcher.py:48: DeprecationWarning: parsing timezone aware datetimes is deprecated; this will raise an error in the future\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(49, 11)\n"
+      "(48, 11)\n"
      ]
     }
    ],
@@ -758,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -768,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -776,7 +792,7 @@
     "ts_cutoff_1m = pd.to_datetime('now') - pd.to_timedelta('30days')\n",
     "all_courses_df['if_active_last_week'] = np.where(all_courses_df.last_update_at>ts_cutoff_1w, True, False)\n",
     "all_courses_df['if_active_last_month'] = np.where(all_courses_df.last_update_at>ts_cutoff_1m, True, False)\n",
-    "all_courses_df['if_active_since_June1'] = np.where(all_courses_df.last_update_at>=pd.to_datetime('2020-06-01'),\n",
+    "all_courses_df['if_active_since_June1'] = np.where(all_courses_df.first_created_at>=pd.to_datetime('2020-06-01'),\n",
     "                                                   True, False)\n",
     "all_courses_df['if_sandbox_course'] = np.where(all_courses_df.Dept=='Sandboxes', 1, 0)\n",
     "all_courses_df['if_default_fa'] = np.where(all_courses_df.num_tot_fa==26, 1, 0)\n",
@@ -787,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,14 +814,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1it [00:03,  3.40s/it]\n"
+      "1it [00:02,  2.80s/it]\n"
      ]
     }
    ],
