exclude last day

--- a/canvas_courses_all.ipynb
+++ b/canvas_courses_all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,16 +85,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_Canvas__requester': <canvasapi.requester.Requester at 0x10d98d710>}"
+       "{'_Canvas__requester': <canvasapi.requester.Requester at 0x11393f9b0>}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -826,7 +826,10 @@
     }
    ],
    "source": [
-    "all_courses_df[all_courses_df.if_sandbox_course==0]\n",
+    "#Exclude the last day's information as that's still incomplete.\n",
+    "all_courses_df['first_created_at'] = pd.to_datetime(all_courses_df['first_created_at'])\n",
+    "all_courses_df = all_courses_df[all_courses_df.first_created_at!= all_courses_df['first_created_at'].max()]\n",
+    "\n",
     "all_courses_df.to_gbq('lt_courses.{}'.format(out_table), project_id, if_exists='replace', credentials=credentials)\n",
     "#all_courses_df.to_csv('all_courses.csv', index=None)"
    ]
