more default courses

--- a/canvas_courses_all.ipynb
+++ b/canvas_courses_all.ipynb
@@ -795,7 +795,10 @@
     "all_courses_df['if_active_since_June1'] = np.where(all_courses_df.first_created_at>=pd.to_datetime('2020-06-01'),\n",
     "                                                   True, False)\n",
     "all_courses_df['if_sandbox_course'] = np.where(all_courses_df.Dept=='Sandboxes', 1, 0)\n",
-    "all_courses_df['if_default_fa'] = np.where(all_courses_df.num_tot_fa==26, 1, 0)\n",
+    "#all_courses_df['if_default_fa'] = np.where(all_courses_df.num_tot_fa==26, 1, 0)\n",
+    "all_courses_df['if_default_fa'] = np.where((((all_courses_df.num_files==22) & (all_courses_df.num_assignments==4)) \n",
+    "                              | ((all_courses_df.num_files==34) & (all_courses_df.num_assignments==26))), 1, 0)\n",
+    "\n",
     "all_courses_df = all_courses_df[all_courses_df.course_id.notna()].reset_index(drop=True)\n",
     "all_courses_df.drop_duplicates(subset=['course_id'], keep='last', inplace=True)\n",
     "#all_courses_df.tail()"
@@ -832,6 +835,15 @@
     "\n",
     "all_courses_df.to_gbq('lt_courses.{}'.format(out_table), project_id, if_exists='replace', credentials=credentials)\n",
     "#all_courses_df.to_csv('all_courses.csv', index=None)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Find total courses by date snapshot\n",
+    "\n",
+    "We'll take a snapshot of all the previous courses, and for each day, we'll add only the new numbers."
    ]
   }
  ],
