added basedir instead of changing pwd by hand

--- a/canvas_courses_all.ipynb
+++ b/canvas_courses_all.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -48,46 +48,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "if run_mode == 'dev':\n",
-    "    cred_file_path = \".\"\n",
     "    out_table = \"all_courses3\"\n",
+    "    \n",
     "elif run_mode == 'prod':\n",
-    "    cred_file_path = \"/home/aroy/projects/canvas_data_portal/canvas_course_tracking\"\n",
     "    out_table = \"all_courses4\"\n",
     "\n",
     "elif run_mode == 'prod_home':\n",
-    "    cred_file_path = \".\"\n",
     "    out_table = \"all_courses4\"\n",
     "\n",
     "    \n",
     "elif run_mode == 'mig':\n",
-    "    cred_file_path = \"/home/aroy/projects/canvas_data_portal/canvas_course_tracking\"\n",
     "    out_table = \"all_courses3\"\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "#get Google cloud credentials\n",
     "project_id = 'canvas-portal-data-custom'\n",
-    "cred_file = '{}/canvas-portal-data-custom-6e244db3b826.json'.format(cred_file_path)\n",
+    "cred_file = '{}/canvas-portal-data-custom-6e244db3b826.json'.format(basedir)\n",
     "data_dl = 'data'\n",
     "scopes = [ \"https://www.googleapis.com/auth/drive\", \"https://www.googleapis.com/auth/drive.file\",\n",
     "            \"https://spreadsheets.google.com/auth/spreadsheets\"]\n",
     "credentials = service_account.Credentials.from_service_account_file(cred_file,)\n",
     "\n",
     "#get Canvas credentials\n",
-    "cred_file2 = '{}/instances.json'.format(cred_file_path)\n",
+    "cred_file2 = '{}/instances.json'.format(basedir)\n",
     "with open(cred_file2,'r') as cred2:\n",
     "    cred_json = json.load(cred2)\n",
     "\n",
@@ -97,16 +94,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_Canvas__requester': <canvasapi.requester.Requester at 0x7f84e064ffd0>}"
+       "{'_Canvas__requester': <canvasapi.requester.Requester at 0x7f84e061f460>}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +215,7 @@
        "43   ajlwill@mit.edu  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +223,7 @@
    "source": [
     "#Get the LT list from the Excel sheet\n",
     "lt_df_cols = ['School', 'Dept_num', 'Dept_name', 'Name', 'Email']\n",
-    "lt_df = pd.read_excel('{}/Learning_Technologists_updating.xlsx'.format(cred_file_path))\n",
+    "lt_df = pd.read_excel('{}/Learning_Technologists_updating.xlsx'.format(basedir))\n",
     "lt_df.columns = lt_df_cols\n",
     "lt_df['Email'] = lt_df.Email.str.lower()\n",
     "lt_df.tail()"
