debugged courses missing due to lack of files creation times

--- a/canvas_courses_all.ipynb
+++ b/canvas_courses_all.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,13 +84,25 @@
     "credentials = service_account.Credentials.from_service_account_file(cred_file,)\n",
     "\n",
     "#get Canvas credentials\n",
-    "cred_file2 = '{}/instances.json'.format(basedir)\n",
-    "with open(cred_file2,'r') as cred2:\n",
-    "    cred_json = json.load(cred2)\n",
+    "#cred_file2 = '{}/instances.json'.format(basedir)\n",
+    "#with open(cred_file2,'r') as cred2:\n",
+    "#    cred_json = json.load(cred2)\n",
     "\n",
-    "API_KEY = cred_json['ACCES_TOKEN']\n",
-    "API_URL = cred_json['API_URL']#+'/accounts/1'"
+    "from instances import canvas_api, panopto_api\n",
+    "\n",
+    "canvas_API_KEY = canvas_api['ACCES_TOKEN']\n",
+    "canvas_API_URL = canvas_api['API_URL']#+'/accounts/1'\n",
+    "\n",
+    "panopto_client_id = panopto_api['Client Id']\n",
+    "panopto_client_secret = panopto_api['Client Secret']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -100,7 +112,7 @@
     {
      "data": {
       "text/plain": [
-       "{'_Canvas__requester': <canvasapi.requester.Requester at 0x7fccfa9df790>}"
+       "{'_Canvas__requester': <canvasapi.requester.Requester at 0x7fac701a4310>}"
       ]
      },
      "execution_count": 6,
@@ -110,8 +122,10 @@
    ],
    "source": [
     "# Initialize a new Canvas object\n",
-    "canvas = Canvas(API_URL, API_KEY)\n",
-    "canvas.__dict__"
+    "canvas = Canvas(canvas_API_URL, canvas_API_KEY)\n",
+    "canvas.__dict__\n",
+    "\n",
+    "#Initialize a new Panopto object"
    ]
   },
   {
@@ -176,7 +190,210 @@
     "def get_course_info(course_id):\n",
     "    '''This function gets the course information and the file/assignment update times,\n",
     "    by the course_id, and returns a list of '''\n",
-    "    cutoff_date = datetime.strptime('2020-05-31', '%Y-%m-%d') #by this time most default content was created\n",
+    "    cutoff_date = datetime.strptime('2015-05-31', '%Y-%m-%d') #by this time most default content was created\n",
+    "    \n",
+    "    try:\n",
+    "        c1 = canvas.get_course(course_id, include='total_students')\n",
+    "    except:\n",
+    "        c1 = None\n",
+    "        \n",
+    "    try:\n",
+    "        enrollment_term = term_dict[c1.enrollment_term_id]\n",
+    "    except:\n",
+    "        enrollment_term = None\n",
+    "        \n",
+    "    try:\n",
+    "        course_dept = sub_account_dict[c1.account_id]\n",
+    "    except:\n",
+    "        course_dept = None\n",
+    "\n",
+    "        \n",
+    "    try:\n",
+    "        parent_account = parent_account_dict[c1.account_id]\n",
+    "    except:\n",
+    "        parent_account = None\n",
+    "\n",
+    "\n",
+    "    try:\n",
+    "        course_name = c1.name\n",
+    "        \n",
+    "    except:\n",
+    "        course_name = None\n",
+    "        \n",
+    "\n",
+    "    try:\n",
+    "        course_state = c1.workflow_state\n",
+    "\n",
+    "    except:\n",
+    "        course_state = None\n",
+    "\n",
+    "        \n",
+    "    try:\n",
+    "        num_students = c1.total_students\n",
+    "\n",
+    "    except:\n",
+    "        num_students = None\n",
+    "        \n",
+    "        \n",
+    "    #Find out if the course is public or not:\n",
+    "    try:    \n",
+    "        is_public = c1.is_public\n",
+    "    except:\n",
+    "        is_public = None\n",
+    "\n",
+    "\n",
+    "    try:\n",
+    "        public_syllabus = c1.public_syllabus\n",
+    "    except:\n",
+    "        public_syllabus = None\n",
+    "\n",
+    "\n",
+    "    try:\n",
+    "        public_syllabus_to_auth = c1.public_syllabus_to_auth\n",
+    "    except:\n",
+    "        public_syllabus_to_auth = None\n",
+    "\n",
+    "\n",
+    "    try:        \n",
+    "        is_public_to_auth_users = c1.is_public_to_auth_users\n",
+    "    except:\n",
+    "        is_public_to_auth_users = None\n",
+    "\n",
+    "        \n",
+    "        \n",
+    "    if is_public == 1:\n",
+    "        course_visibility = 'public'\n",
+    "    elif is_public == 0 and is_public_to_auth_users == 1:\n",
+    "        course_visibility = 'institute'\n",
+    "    elif is_public == 0 and is_public_to_auth_users == 0:\n",
+    "        course_visibility = 'not_public_to_auth_users'\n",
+    "    else:\n",
+    "        course_visibility = 'unknown'\n",
+    "\n",
+    "    #get discussion_topics, pages, quizzes, assignment_groups, modules, and module items\n",
+    "    try:\n",
+    "        list_dis_topics = c1.get_discussion_topics()\n",
+    "    except:\n",
+    "        list_dis_topics = []\n",
+    "        \n",
+    "        \n",
+    "    try:\n",
+    "        list_pages = c1.get_pages()\n",
+    "    except:\n",
+    "        list_pages = []        \n",
+    "        \n",
+    "    try:\n",
+    "        list_quizzes = c1.get_quizzes()\n",
+    "    except:\n",
+    "        list_quizzes = []        \n",
+    "        \n",
+    "    try:\n",
+    "        list_assignment_groups = c1.get_assignment_groups()\n",
+    "    except:\n",
+    "        list_assignment_groups = []        \n",
+    "\n",
+    "    def count_stuff(list_items, if_published=None):\n",
+    "        num_stuff = 0\n",
+    "        for item in list_items:\n",
+    "            if if_published != None:\n",
+    "                if item.published == if_published:\n",
+    "                    num_stuff += 1\n",
+    "\n",
+    "            elif if_published == None:\n",
+    "                num_stuff += 1\n",
+    "\n",
+    "\n",
+    "        return num_stuff\n",
+    "\n",
+    "    num_published_dis_topics = count_stuff(list_dis_topics, if_published=True)\n",
+    "    num_published_pages = count_stuff(list_pages, if_published=True)\n",
+    "    num_published_quizzes = count_stuff(list_quizzes, if_published=True)\n",
+    "    num_assignment_groups = count_stuff(list_assignment_groups, if_published=None) \n",
+    "    #Note: different if_published kwd\n",
+    "\n",
+    "    try:\n",
+    "        modules_list = c1.get_modules()\n",
+    "    except:\n",
+    "        modules_list = []\n",
+    "    num_modules = 0\n",
+    "    num_module_items = 0\n",
+    "\n",
+    "    for d_ in modules_list:\n",
+    "        num_modules += 1\n",
+    "        num_module_items += d_.items_count\n",
+    "\n",
+    "\n",
+    "    #get files and assignments\n",
+    "    try:\n",
+    "        files_ = c1.get_files()\n",
+    "    except:\n",
+    "        files_ = []\n",
+    "        \n",
+    "    try:\n",
+    "        assn_ = c1.get_assignments()\n",
+    "    except:\n",
+    "        assn_ = []\n",
+    "        \n",
+    "    #Get the file updated times\n",
+    "    file_utimes_all = [f_.updated_at for f_ in files_ ]        \n",
+    "    file_utimes = [f_.updated_at for f_ in files_ if datetime.strptime(f_.updated_at, \n",
+    "                                                                    '%Y-%m-%dT%H:%M:%SZ') > cutoff_date]\n",
+    "\n",
+    "    #Get the file created times\n",
+    "    file_ctimes_all = [f_.created_at for f_ in files_ ]\n",
+    "    file_ctimes = [f_.created_at for f_ in files_ if datetime.strptime(f_.created_at, \n",
+    "                                                                    '%Y-%m-%dT%H:%M:%SZ') > cutoff_date]\n",
+    "\n",
+    "    #Get the assignment updated times\n",
+    "    assn_utimes_all = [a_.updated_at for a_ in assn_ ]\n",
+    "    assn_utimes = [a_.updated_at for a_ in assn_ if datetime.strptime(a_.updated_at, \n",
+    "                                                                    '%Y-%m-%dT%H:%M:%SZ') > cutoff_date]\n",
+    "\n",
+    "\n",
+    "    #Get the assignment created times\n",
+    "    assn_ctimes_all = [a_.created_at for a_ in assn_ ]\n",
+    "    assn_ctimes = [a_.created_at for a_ in assn_ if datetime.strptime(a_.created_at, \n",
+    "                                                                    '%Y-%m-%dT%H:%M:%SZ') > cutoff_date]\n",
+    "\n",
+    "    fa_times_all = file_utimes_all + assn_utimes_all\n",
+    "    fa_c_times_all = file_ctimes_all + assn_ctimes_all\n",
+    "\n",
+    "    fa_times = file_utimes + assn_utimes\n",
+    "    fa_c_times = file_ctimes + assn_ctimes\n",
+    "\n",
+    "\n",
+    "    #Convert the whole thing \n",
+    "    fa_times_all = np.array(fa_times_all, dtype='datetime64')\n",
+    "    fa_c_times_all = np.array(fa_c_times_all, dtype='datetime64')\n",
+    "\n",
+    "    fa_times = np.array(fa_times, dtype='datetime64')\n",
+    "    fa_c_times = np.array(fa_c_times, dtype='datetime64')      \n",
+    "\n",
+    "    try:\n",
+    "        fa_max = fa_times.max() if len(fa_times)>0 else fa_times_all.max()\n",
+    "    except:\n",
+    "        fa_max = None\n",
+    "        \n",
+    "    try:\n",
+    "        fa_c_min = fa_c_times.min() if len(fa_c_times)>0 else fa_c_times_all.min()\n",
+    "    except:\n",
+    "        fa_c_min = None\n",
+    "\n",
+    "    return [course_id, course_dept, enrollment_term, parent_account, course_name, course_state,\n",
+    "            len(file_utimes_all), len(assn_utimes_all), len(fa_times_all), \n",
+    "            fa_max, fa_c_min, num_students, is_public, public_syllabus,\n",
+    "           public_syllabus_to_auth, is_public_to_auth_users, course_visibility, num_published_dis_topics,\n",
+    "            num_published_pages, num_published_quizzes, num_assignment_groups,num_modules, num_module_items]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "    '''\n",
     "    try:\n",
     "        c1 = canvas.get_course(course_id, include='total_students')\n",
     "\n",
@@ -290,7 +507,8 @@
     "    except Exception as e:\n",
     "        #print(e)\n",
     "        return [None, None, None, None, None, None, None, None, None, None, None, None,\n",
-    "                None, None, None, None, None, None, None, None, None, None, None]"
+    "                None, None, None, None, None, None, None, None, None, None, None]\n",
+    "    '''"
    ]
   },
   {
@@ -504,7 +722,7 @@
     "large_num = 100000 #give a very large number so all courses are pulled recursively\n",
     "#excl_acc = [1,17,76] #mention sub-accounts to be excluded\n",
     "excl_acc = [] #Don't implement it here...\n",
-    "begin_date = '2020-05-01' #Date since when we are counting\n",
+    "begin_date = '2015-05-01' #Date since when we are counting\n",
     "\n",
     "course_rows = []\n",
     "course_cols = ['course_id', 'course_code', 'course_name', 'account_id', 'created_at']\n",
